--- a/gradle.properties
+++ b/gradle.properties
@@ -17,5 +17,5 @@ kotlin.code.style=official
 org.gradle.jvmargs=-Xmx2048m -Dfile.encoding\=UTF-8
 
 # Get warnings (all, none, summary)
-org.gradle.warning.mode=summary
+org.gradle.warning.mode=all
 
