--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,7 +10,7 @@ android {
     compileSdk 33
 
     defaultConfig {
-        applicationId "com.example.xportalconnect"
+        applicationId "com.example.hellocowcow"
         minSdk 24
         targetSdk 33
         versionCode 1
@@ -42,11 +42,10 @@ android {
         jvmTarget = '17'
     }
     buildFeatures {
-        viewBinding true
         compose true
     }
     composeOptions {
-        kotlinCompilerExtensionVersion '1.4.2'
+        kotlinCompilerExtensionVersion '1.4.8'
     }
     packagingOptions {
         resources {
@@ -59,12 +58,12 @@ android {
 }
 
 def retrofit_version = "2.9.0"
-def hilt_version = "2.46.1"
+def hilt_version = "2.47"
 
 dependencies {
 
     implementation 'androidx.core:core-ktx:1.10.1'
-    implementation platform('org.jetbrains.kotlin:kotlin-bom:1.8.10')
+    implementation platform('org.jetbrains.kotlin:kotlin-bom:1.8.22')
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.1'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.9.0'
@@ -74,18 +73,20 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.1'
     implementation "androidx.lifecycle:lifecycle-runtime-compose:2.6.1"
 
+    // Glide
+    implementation 'com.github.bumptech.glide:compose:4.14.0'
+
     // Crypto
     implementation 'org.bitcoinj:bitcoinj-core:0.17-alpha1'
 
     // Compose
     implementation 'androidx.activity:activity-compose:1.7.2'
-    implementation platform('androidx.compose:compose-bom:2022.10.00')
-    implementation 'androidx.compose.ui:ui'
-    implementation 'androidx.compose.ui:ui-graphics'
-    implementation 'androidx.compose.ui:ui-tooling-preview'
-    implementation 'androidx.compose.material3:material3'
+    implementation 'androidx.compose.ui:ui:1.4.3'
+    implementation 'androidx.compose.ui:ui-graphics:1.4.3'
+    implementation 'androidx.compose.ui:ui-tooling-preview:1.4.3'
+    implementation 'androidx.compose.material3:material3:1.1.1'
     implementation 'androidx.navigation:navigation-compose:2.6.0'
-    implementation 'androidx.compose.material:material-icons-extended'
+    implementation 'androidx.compose.material:material-icons-extended:1.4.3'
     implementation "androidx.compose.runtime:runtime-rxjava3:1.4.3"
 
     // WalletConnect
@@ -120,9 +121,8 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
-    androidTestImplementation platform('androidx.compose:compose-bom:2022.10.00')
-    androidTestImplementation 'androidx.compose.ui:ui-test-junit4'
-    debugImplementation 'androidx.compose.ui:ui-tooling'
-    debugImplementation 'androidx.compose.ui:ui-test-manifest'
+    androidTestImplementation 'androidx.compose.ui:ui-test-junit4:1.4.3'
+    debugImplementation 'androidx.compose.ui:ui-tooling:1.4.3'
+    debugImplementation 'androidx.compose.ui:ui-test-manifest:1.4.3'
 
 }
