--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,6 +75,8 @@ dependencies {
 
     // Glide
     implementation 'com.github.bumptech.glide:compose:4.14.0'
+    implementation 'com.github.bumptech.glide:annotations:4.15.1'
+    implementation 'com.google.accompanist:accompanist-drawablepainter:0.30.1'
 
     // Crypto
     implementation 'org.bitcoinj:bitcoinj-core:0.17-alpha1'
