--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,8 @@
         tools:replace="android:dataExtractionRules"
         tools:targetApi="31">
 
+        <activity android:name=".app.module.NftActivity"/>
+
         <activity
             android:name=".app.module.login.activity.LoginActivity"
             android:exported="true" />
