--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,7 +31,9 @@ android {
     buildTypes {
         release {
             minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            proguardFiles getDefaultProguardFile(
+                    'proguard-android-optimize.txt'
+            ),'proguard-rules.pro'
         }
     }
     compileOptions {
