--- a/app/build.gradle
+++ b/app/build.gradle
@@ -77,13 +77,15 @@ dependencies {
 
     implementation 'com.github.GrenderG:Toasty:1.5.2'
 
+    implementation 'com.google.guava:guava:32.1.2-android'
+
     // Glide
     implementation 'com.github.bumptech.glide:compose:4.14.0'
     implementation 'com.github.bumptech.glide:annotations:4.15.1'
     implementation 'com.google.accompanist:accompanist-drawablepainter:0.30.1'
 
     // Crypto
-    implementation 'org.bitcoinj:bitcoinj-core:0.17-alpha1'
+    implementation 'org.bitcoinj:bitcoinj-core:0.17-alpha2'
 
     // Compose
     implementation 'androidx.activity:activity-compose:1.7.2'
