--- a/gradle.properties
+++ b/gradle.properties
@@ -18,4 +18,5 @@ org.gradle.jvmargs=-Xmx2048m -Dfile.encoding\=UTF-8
 
 # Get warnings (all, none, summary)
 org.gradle.warning.mode=all
+kotlin.experimental.tryK2=true
 
