--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,7 +65,7 @@ def hilt_version = "2.47"
 dependencies {
 
     implementation 'androidx.core:core-ktx:1.10.1'
-    implementation platform('org.jetbrains.kotlin:kotlin-bom:1.9.0')
+    implementation platform('org.jetbrains.kotlin:kotlin-bom:1.9.10')
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.1'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.9.0'
@@ -77,11 +77,11 @@ dependencies {
 
     implementation 'com.github.GrenderG:Toasty:1.5.2'
 
-    implementation 'com.google.guava:guava:32.1.2-android'
+    implementation 'com.google.guava:guava:32.1.2-jre'
 
     // Glide
     implementation 'com.github.bumptech.glide:compose:4.14.0'
-    implementation 'com.github.bumptech.glide:annotations:4.15.1'
+    implementation 'com.github.bumptech.glide:annotations:4.16.0'
     implementation 'com.google.accompanist:accompanist-drawablepainter:0.30.1'
 
     // Crypto
@@ -106,7 +106,7 @@ dependencies {
     implementation "androidx.core:core-splashscreen:1.0.1"
 
     // RxJava
-    implementation "io.reactivex.rxjava3:rxjava:3.1.6"
+    implementation 'io.reactivex.rxjava3:rxjava:3.1.7'
     implementation "io.reactivex.rxjava3:rxandroid:3.0.2"
     implementation "io.reactivex.rxjava3:rxkotlin:3.0.1"
 
