--- a/app/build.gradle
+++ b/app/build.gradle
@@ -89,17 +89,18 @@ dependencies {
 
     // Compose
     implementation 'androidx.activity:activity-compose:1.7.2'
-    implementation 'androidx.compose.ui:ui:1.5.1'
-    implementation 'androidx.compose.ui:ui-graphics:1.5.1'
-    implementation 'androidx.compose.ui:ui-tooling-preview:1.5.1'
-    implementation 'androidx.compose.material3:material3:1.1.1'
-    implementation 'androidx.navigation:navigation-compose:2.7.2'
-    implementation 'androidx.compose.material:material-icons-extended:1.5.1'
-    implementation "androidx.compose.runtime:runtime-rxjava3:1.5.1"
+    implementation 'androidx.compose.ui:ui:1.5.2'
+    implementation 'androidx.compose.ui:ui-graphics:1.5.2'
+    implementation 'androidx.compose.ui:ui-tooling-preview:1.5.2'
+    implementation 'androidx.compose.material3:material3:1.1.2'
+    implementation 'androidx.navigation:navigation-compose:2.7.3'
+    implementation 'androidx.compose.material:material-icons-extended:1.5.2'
+    implementation "androidx.compose.runtime:runtime-rxjava3:1.5.2"
 
     // WalletConnect
-    implementation 'com.walletconnect:android-core:1.20.0'
-    implementation 'com.walletconnect:sign:2.18.0'
+    implementation 'com.walletconnect:android-core:1.21.0'
+    implementation 'com.walletconnect:sign:2.19.0'
+    implementation 'com.walletconnect:web3wallet:1.14.0'
 
     // SplashScreen
     implementation "androidx.core:core-splashscreen:1.0.1"
@@ -131,8 +132,8 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
-    androidTestImplementation 'androidx.compose.ui:ui-test-junit4:1.5.1'
-    debugImplementation 'androidx.compose.ui:ui-tooling:1.5.1'
-    debugImplementation 'androidx.compose.ui:ui-test-manifest:1.5.1'
+    androidTestImplementation 'androidx.compose.ui:ui-test-junit4:1.5.2'
+    debugImplementation 'androidx.compose.ui:ui-tooling:1.5.2'
+    debugImplementation 'androidx.compose.ui:ui-test-manifest:1.5.2'
 
 }
