--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,18 +3,19 @@ plugins {
     id 'org.jetbrains.kotlin.android'
     id 'com.google.devtools.ksp'
     id 'com.google.dagger.hilt.android'
+    id 'org.jetbrains.kotlin.plugin.compose'
 }
 
 android {
     namespace 'com.example.hellocowcow'
-    compileSdk 34
+    compileSdk 35
 
     defaultConfig {
         applicationId "com.example.hellocowcow"
         minSdk 24
-        targetSdk 34
         versionCode 1
         versionName "1.0"
+        multiDexEnabled true
 
         Properties properties = new Properties()
         properties.load(project.rootProject.file('local.properties').newDataInputStream())
@@ -54,26 +55,26 @@ android {
             excludes += '/META-INF/{AL2.0,LGPL2.1}'
         }
     }
-    configurations{
-        all*.exclude module: 'bcprov-jdk15on'
-    }
+
 }
 
 def retrofit_version = "2.9.0"
 def hilt_version = "2.48"
+def compose_version = '1.7.5'
+def lifecycle_version = '2.8.7'
 
 dependencies {
 
-    implementation 'androidx.core:core-ktx:1.12.0'
+    implementation "androidx.core:core-ktx:1.15.0"
     implementation platform('org.jetbrains.kotlin:kotlin-bom:1.9.10')
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.7.0'
-    implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'com.google.android.material:material:1.11.0'
-    implementation 'androidx.annotation:annotation:1.7.1'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.7.0'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.7.0'
-    implementation "androidx.lifecycle:lifecycle-runtime-compose:2.7.0"
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_version"
+    implementation "androidx.appcompat:appcompat:1.7.0"
+    implementation "com.google.android.material:material:1.12.0"
+    implementation "androidx.annotation:annotation:1.9.1"
+    implementation "androidx.constraintlayout:constraintlayout:2.2.0"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-runtime-compose:$lifecycle_version"
 
     implementation 'com.github.GrenderG:Toasty:1.5.2'
 
@@ -84,23 +85,22 @@ dependencies {
     implementation 'com.github.bumptech.glide:annotations:4.16.0'
     implementation 'com.google.accompanist:accompanist-drawablepainter:0.30.1'
 
-    // Crypto
-    implementation 'org.bitcoinj:bitcoinj-core:0.17-alpha2'
+    implementation 'androidx.multidex:multidex:2.0.1'
 
     // Compose
-    implementation 'androidx.activity:activity-compose:1.8.2'
-    implementation 'androidx.compose.ui:ui:1.6.2'
-    implementation 'androidx.compose.ui:ui-graphics:1.6.2'
-    implementation 'androidx.compose.ui:ui-tooling-preview:1.6.2'
-    implementation 'androidx.compose.material3:material3:1.2.0'
-    implementation 'androidx.navigation:navigation-compose:2.7.7'
-    implementation 'androidx.compose.material:material-icons-extended:1.6.2'
-    implementation "androidx.compose.runtime:runtime-rxjava3:1.6.2"
+    implementation 'androidx.activity:activity-compose:1.9.3'
+    implementation "androidx.compose.ui:ui:$compose_version"
+    implementation "androidx.compose.ui:ui-graphics:$compose_version"
+    implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
+    implementation "androidx.compose.material3:material3:1.3.1"
+    implementation "androidx.navigation:navigation-compose:2.8.4"
+    implementation "androidx.compose.material:material-icons-extended:$compose_version"
+    implementation "androidx.compose.runtime:runtime-rxjava3:$compose_version"
 
     // WalletConnect
-    implementation 'com.walletconnect:android-core:1.21.0'
-    implementation 'com.walletconnect:sign:2.19.0'
-    implementation 'com.walletconnect:web3wallet:1.14.0'
+    implementation 'com.reown:sign:1.0.0'
+    implementation 'com.reown:android-core:1.0.0'
+    implementation "com.reown:walletkit:1.0.0"
 
     // SplashScreen
     implementation "androidx.core:core-splashscreen:1.0.1"
@@ -114,7 +114,7 @@ dependencies {
     implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
     implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
     implementation "com.squareup.retrofit2:adapter-rxjava3:$retrofit_version"
-    implementation "com.squareup.okhttp3:okhttp:4.11.0"
+    implementation "com.squareup.okhttp3:okhttp:4.12.0"
 
     implementation 'androidx.hilt:hilt-navigation-compose:1.2.0'
 
@@ -130,10 +130,10 @@ dependencies {
 
     // Test
     testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
-    androidTestImplementation 'androidx.compose.ui:ui-test-junit4:1.6.2'
-    debugImplementation 'androidx.compose.ui:ui-tooling:1.6.2'
-    debugImplementation 'androidx.compose.ui:ui-test-manifest:1.6.2'
+    androidTestImplementation 'androidx.test.ext:junit:1.2.1'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.6.1'
+    androidTestImplementation 'androidx.compose.ui:ui-test-junit4:1.7.5'
+    debugImplementation 'androidx.compose.ui:ui-tooling:1.7.5'
+    debugImplementation 'androidx.compose.ui:ui-test-manifest:1.7.5'
 
 }
