--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,61 +1,55 @@
 plugins {
-    id 'com.android.application'
-    id 'org.jetbrains.kotlin.android'
-    id 'com.google.devtools.ksp'
-    id 'com.google.dagger.hilt.android'
-    id 'org.jetbrains.kotlin.plugin.compose'
+  id 'com.android.application'
+  id 'org.jetbrains.kotlin.android'
+  id 'com.google.devtools.ksp'
+  id 'com.google.dagger.hilt.android'
+  id 'org.jetbrains.kotlin.plugin.compose'
 }
 
 android {
-    namespace 'com.example.hellocowcow'
-    compileSdk 35
+  namespace 'com.example.hellocowcow'
+  compileSdk 35
 
+  defaultConfig {
+    applicationId "com.example.hellocowcow"
+    minSdk 24
+    versionCode 1
+    versionName "1.0"
+    multiDexEnabled true
+
+    Properties properties = new Properties()
+    properties.load(project.rootProject.file('local.properties').newDataInputStream())
     defaultConfig {
-        applicationId "com.example.hellocowcow"
-        minSdk 24
-        versionCode 1
-        versionName "1.0"
-        multiDexEnabled true
-
-        Properties properties = new Properties()
-        properties.load(project.rootProject.file('local.properties').newDataInputStream())
-        defaultConfig {
-            resValue "string", "wallet_connect_id", properties.getProperty("wallet.connect.id", "")
-        }
-
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-        vectorDrawables {
-            useSupportLibrary true
-        }
+      resValue "string", "wallet_connect_id", properties.getProperty("wallet.connect.id", "")
     }
 
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile(
-                    'proguard-android-optimize.txt'
-            ),'proguard-rules.pro'
-        }
+    testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+    vectorDrawables {
+      useSupportLibrary true
     }
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_18
-        targetCompatibility JavaVersion.VERSION_18
-    }
-    kotlinOptions {
-        jvmTarget = '18'
-    }
-    buildFeatures {
-        compose true
-    }
-    composeOptions {
-        kotlinCompilerExtensionVersion '1.5.0'
-    }
-    packagingOptions {
-        resources {
-            excludes += '/META-INF/{AL2.0,LGPL2.1}'
-        }
-    }
+  }
 
+  buildTypes {
+    release {
+      minifyEnabled false
+      proguardFiles getDefaultProguardFile(
+          'proguard-android-optimize.txt'
+      ),'proguard-rules.pro'
+    }
+  }
+  compileOptions {
+    sourceCompatibility JavaVersion.VERSION_18
+    targetCompatibility JavaVersion.VERSION_18
+  }
+  kotlinOptions {
+    jvmTarget = '18'
+  }
+  buildFeatures {
+    compose true
+  }
+  composeOptions {
+    kotlinCompilerExtensionVersion '1.5.0'
+  }
 }
 
 def retrofit_version = "2.9.0"
@@ -65,75 +59,74 @@ def lifecycle_version = '2.8.7'
 
 dependencies {
 
-    implementation "androidx.core:core-ktx:1.15.0"
-    implementation platform('org.jetbrains.kotlin:kotlin-bom:1.9.10')
-    implementation "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_version"
-    implementation "androidx.appcompat:appcompat:1.7.0"
-    implementation "com.google.android.material:material:1.12.0"
-    implementation "androidx.annotation:annotation:1.9.1"
-    implementation "androidx.constraintlayout:constraintlayout:2.2.0"
-    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
-    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
-    implementation "androidx.lifecycle:lifecycle-runtime-compose:$lifecycle_version"
+  implementation "androidx.core:core-ktx:1.15.0"
+  implementation "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_version"
+  implementation "androidx.appcompat:appcompat:1.7.0"
+  implementation "com.google.android.material:material:1.12.0"
+  implementation "androidx.annotation:annotation:1.9.1"
+  implementation "androidx.constraintlayout:constraintlayout:2.2.0"
+  implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
+  implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
+  implementation "androidx.lifecycle:lifecycle-runtime-compose:$lifecycle_version"
 
-    implementation 'com.github.GrenderG:Toasty:1.5.2'
+  implementation 'com.github.GrenderG:Toasty:1.5.2'
 
-    implementation 'com.google.guava:guava:32.1.2-jre'
+  implementation 'com.google.guava:guava:32.1.2-jre'
 
-    // Glide
-    implementation 'com.github.bumptech.glide:compose:4.14.0'
-    implementation 'com.github.bumptech.glide:annotations:4.16.0'
-    implementation 'com.google.accompanist:accompanist-drawablepainter:0.30.1'
+  // Glide
+  implementation 'com.github.bumptech.glide:compose:4.14.0'
+  implementation 'com.github.bumptech.glide:annotations:4.16.0'
+  implementation 'com.google.accompanist:accompanist-drawablepainter:0.30.1'
 
-    implementation 'androidx.multidex:multidex:2.0.1'
+  implementation 'androidx.multidex:multidex:2.0.1'
 
-    // Compose
-    implementation 'androidx.activity:activity-compose:1.9.3'
-    implementation "androidx.compose.ui:ui:$compose_version"
-    implementation "androidx.compose.ui:ui-graphics:$compose_version"
-    implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
-    implementation "androidx.compose.material3:material3:1.3.1"
-    implementation "androidx.navigation:navigation-compose:2.8.4"
-    implementation "androidx.compose.material:material-icons-extended:$compose_version"
-    implementation "androidx.compose.runtime:runtime-rxjava3:$compose_version"
+  // Compose
+  implementation 'androidx.activity:activity-compose:1.9.3'
+  implementation "androidx.compose.ui:ui:$compose_version"
+  implementation "androidx.compose.ui:ui-graphics:$compose_version"
+  implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
+  implementation "androidx.compose.material3:material3:1.3.1"
+  implementation "androidx.navigation:navigation-compose:2.8.4"
+  implementation "androidx.compose.material:material-icons-extended:$compose_version"
+  implementation "androidx.compose.runtime:runtime-rxjava3:$compose_version"
 
-    // WalletConnect
-    implementation 'com.reown:sign:1.0.0'
-    implementation 'com.reown:android-core:1.0.0'
-    implementation "com.reown:walletkit:1.0.0"
+  // WalletConnect
+  implementation 'com.reown:sign:1.0.0'
+  implementation 'com.reown:android-core:1.0.0'
+  implementation "com.reown:walletkit:1.0.0"
 
-    // SplashScreen
-    implementation "androidx.core:core-splashscreen:1.0.1"
+  // SplashScreen
+  implementation "androidx.core:core-splashscreen:1.0.1"
 
-    // RxJava
-    implementation 'io.reactivex.rxjava3:rxjava:3.1.7'
-    implementation "io.reactivex.rxjava3:rxandroid:3.0.2"
-    implementation "io.reactivex.rxjava3:rxkotlin:3.0.1"
+  // RxJava
+  implementation 'io.reactivex.rxjava3:rxjava:3.1.7'
+  implementation "io.reactivex.rxjava3:rxandroid:3.0.2"
+  implementation "io.reactivex.rxjava3:rxkotlin:3.0.1"
 
-    //Retrofit
-    implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
-    implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
-    implementation "com.squareup.retrofit2:adapter-rxjava3:$retrofit_version"
-    implementation "com.squareup.okhttp3:okhttp:4.12.0"
+  //Retrofit
+  implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
+  implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
+  implementation "com.squareup.retrofit2:adapter-rxjava3:$retrofit_version"
+  implementation "com.squareup.okhttp3:okhttp:4.12.0"
 
-    implementation 'androidx.hilt:hilt-navigation-compose:1.2.0'
+  implementation 'androidx.hilt:hilt-navigation-compose:1.2.0'
 
-    // Hilt
-    implementation "com.google.dagger:hilt-android:$hilt_version"
-    ksp "com.google.dagger:hilt-compiler:$hilt_version"
-    // For instrumentation tests
-    androidTestImplementation "com.google.dagger:hilt-android-testing:$hilt_version"
-    kspAndroidTest "com.google.dagger:hilt-compiler:$hilt_version"
-    // For local unit tests
-    testImplementation "com.google.dagger:hilt-android-testing:$hilt_version"
-    kspTest "com.google.dagger:hilt-compiler:$hilt_version"
+  // Hilt
+  implementation "com.google.dagger:hilt-android:$hilt_version"
+  ksp "com.google.dagger:hilt-compiler:$hilt_version"
+  // For instrumentation tests
+  androidTestImplementation "com.google.dagger:hilt-android-testing:$hilt_version"
+  kspAndroidTest "com.google.dagger:hilt-compiler:$hilt_version"
+  // For local unit tests
+  testImplementation "com.google.dagger:hilt-android-testing:$hilt_version"
+  kspTest "com.google.dagger:hilt-compiler:$hilt_version"
 
-    // Test
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.2.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.6.1'
-    androidTestImplementation 'androidx.compose.ui:ui-test-junit4:1.7.5'
-    debugImplementation 'androidx.compose.ui:ui-tooling:1.7.5'
-    debugImplementation 'androidx.compose.ui:ui-test-manifest:1.7.5'
+  // Test
+  testImplementation 'junit:junit:4.13.2'
+  androidTestImplementation 'androidx.test.ext:junit:1.2.1'
+  androidTestImplementation 'androidx.test.espresso:espresso-core:3.6.1'
+  androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
+  debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
+  debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_version"
 
 }
