--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,6 @@ plugins {
     id 'org.jetbrains.kotlin.android' version '2.0.0' apply false
     id 'com.google.devtools.ksp' version '2.0.0-1.0.22' apply false
     id 'com.google.dagger.hilt.android' version '2.48' apply false
-    id("org.jetbrains.kotlin.plugin.compose") version "2.0.0" // this version matches your Kotlin version
+    id 'org.jetbrains.kotlin.plugin.compose' version "2.0.0" apply false
 
 }
